Changed api to more abstract way. Added ability to extend the code storage class